v0.6.7
- added auto updater
- adaptions for python 3.9 used in blender 2.93 and later
- Bugfix: pivot and vertex groups are compared all lowercase

v0.6.6 (24.7.21)
- display valid vertex color layer names if layer name is invalid
- display actual bone weights if they do not add up to 100%
- inform user on animation import that armature might have been hidden due to visibility channels
- do not crash on animation import if channels reference non existing bones but inform user instead
- inform user on export if a mesh has no vertices and skip it
- Bugfix: read scale as float instead of short in 'AdaptiveDeltaAnimationChannel'
- Bugfix: do not crash if mesh has more shader structs than vertex materials

v0.6.5 (26.3.21)
- cancel export if a mesh and a bone share the same name and mesh is not configured properly
- inform user if both vertex bone weights do not add up to 100%
- Bugfix: handling of specular and emission color
- Bugfix: use proper file extension for loaded textures
- Bugfix: split vertices with n uv-coords into n vertices

v0.6.4 (23.2.21)
- support mesh property 'two sided'
- cancel export if vertices are not rigged to any bone
- cancel export if vertices are rigged to more than 2 bones
- added vertex material info mapping attributes
- Bugfix: uv corrdinates are correct for meshes where invalid triangles are removed on import
- Bugfix: no negative values for bounding box extend
- Bugfix: proper vertex material args handling
- Bugfix: normalize quaternions on animation export

v0.6.3 (17.1.20)
- geometry data can now be exported to xml and ini

v0.6.2 (01.12.20)
- support for floats in xml files with ',' and '.'
- support more collision box properties (type, collision_type)

v0.6.0 (28.7.20)
- export dummy shade indices (they are needed for the mod SDK (at least for W3X))
- support for mesh sorting levels
- only display appropriate custom object properties
- support mesh flags 'cast_shadow', 'camera oriented' and 'camera aligned'